--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -6,12 +6,13 @@
 	--root-size-h2: 46px;
 	--root-size-h3: 14px;
 	--padding-left: 8px;
+	--width-p: 35ch;
+	--padding-left-p: 8px;
 	--padding-left-sticky: 8px;
 	--margin-p: 8px:
 
 
 }
-
 @media (min-width:1100px) {
 	:root {
 		--root-size: 10px;
@@ -20,6 +21,8 @@
 		--root-size-h1: 32px;
 		--root-size-h2: 50px;
 		--root-size-h3: 14px;
+		--padding-left-p: 50px;
+		--width-p: 40ch;
 		--padding-left-sticky: 50px;
 		--margin-p: 100px:
 	}
@@ -27,10 +30,18 @@ header {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
 }
+.bigtext1 {
+	width: var(--width-p);
+}
+#arrow {
+	margin-left: 1100px;
+	margin-right: 30px;
+}
+}
 .headerdiv {
 	border-right: 5px solid;
 }
-}
+
 
 body {
 	color: #030303;
@@ -50,14 +61,17 @@ section {
 .topspace {
 	padding-top: 40px;
 }
- /* big paragraphs */
-.bigtext1 {
-	font-size: calc(var(--root-size-big) * 2);
-	line-height: 180%;
-}
 p {
 	margin-left: calc(var(--margin-p) * 2);
 	margin-right: calc(var(--margin-p) * 2);
+	padding-left: calc(var(--padding-left-p) * 2);
+	width: calc(var(--width-p) * 2);
+}
+ /* big paragraphs */
+ .bigtext1 {
+	font-size: calc(var(--root-size-big) * 2);
+	line-height: 180%;
+	width: calc(var(--width-p) * 2);
 }
  /* sections with background color */
 .withbackground {
@@ -253,7 +267,3 @@ h4 {
 #lastparagraph {
 	margin-bottom: 40px;
 }
-
-
-
-
