--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -6,43 +6,43 @@
 	--root-size-h2: 46px;
 	--root-size-h3: 14px;
 	--padding-left: 8px;
-	--width-p: 35ch;
+	--width-p: 21ch;
 	--padding-left-p: 8px;
 	--padding-left-sticky: 8px;
-	--margin-p: 8px:
+	--margin-p-left: 8px;
+	--margin-p-right: 8px:
+
+
 
 
 }
-@media (min-width:1100px) {
+@media (min-width:950px) {
 	:root {
 		--root-size: 10px;
 		--padding-left: 50px;
 		--root-size-big: 16px;
 		--root-size-h1: 32px;
 		--root-size-h2: 50px;
-		--root-size-h3: 14px;
+		--root-size-h3: 16px;
 		--padding-left-p: 50px;
 		--width-p: 40ch;
 		--padding-left-sticky: 50px;
-		--margin-p: 100px:
 	}
+
 header {
 	display: grid;
 	grid-template-columns: 2fr 1fr;
-}
-.bigtext1 {
-	width: var(--width-p);
 }
 #arrow {
 	margin-left: 1100px;
 	margin-right: 30px;
 }
-}
 .headerdiv {
 	border-right: 5px solid;
 }
+}
 
-
+ /* mobile */
 body {
 	color: #030303;
 	margin: 0;
@@ -50,7 +50,6 @@ body {
 article {
 	margin-top: 20px;
 	margin-bottom: 10px;
-	font-size: calc(var(--root-size) * 2);
 	font-family: "Merriweather Sans", serif;
 	font-weight: 350;
 	line-height: 170%;
@@ -58,20 +57,25 @@ article {
 section {
 	padding-top: 40px;
 }
+ /* first paragraphs for each title */
 .topspace {
 	padding-top: 40px;
 }
 p {
-	margin-left: calc(var(--margin-p) * 2);
-	margin-right: calc(var(--margin-p) * 2);
+	margin-left: calc(var(--margin-p-left) * 2);
+	margin-right: calc(var(--margin-p-right) * 2);
 	padding-left: calc(var(--padding-left-p) * 2);
-	width: calc(var(--width-p) * 2);
+	width: calc(var(--width-p) * 2.1);
+	font-size: calc(var(--root-size) * 2);
+	line-height: 170%;
 }
  /* big paragraphs */
  .bigtext1 {
-	font-size: calc(var(--root-size-big) * 2);
+	padding-top: 20px;
+	padding-bottom: 20px;
+	font-size: calc(var(--root-size-big) * 1.7);
 	line-height: 180%;
-	width: calc(var(--width-p) * 2);
+	width: calc(var(--width-p) * 1.5); 
 }
  /* sections with background color */
 .withbackground {
@@ -192,8 +196,8 @@ h4 {
 	position: sticky;
 	top: 0;
 	z-index: 1;
-	padding-top: 0.5px;
-	padding-bottom: 0.2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
 
 }
 .stickytitle2 {
@@ -203,8 +207,8 @@ h4 {
 	top: 0;
 	z-index: 4;
 	background-color: #c5c5c5;
-	padding-top: 0.5px;
-	padding-bottom: 0.2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
 }
 .stickytitle3 {
 	border-bottom: 2px solid #000000;
@@ -213,8 +217,8 @@ h4 {
 	top: 0;
 	z-index: 5;
 	background-color: #c5c5c5;
-	padding-top: 0.5px;
-	padding-bottom: 0.2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
 }
 .stickytitle4 {
 	border-bottom: 2px solid #000000;
