--- a/style.css
+++ b/style.css
@@ -6,25 +6,36 @@ header {
 	padding-top: 40px;
 	padding-bottom: 200px;
 	position: relative;
-	z-index: 200;
+	z-index: 50;
 }
-.sticky {
+.headcontainer {
+	overflow: hidden;
+}
+.sticky1 {
+	width: 100%;
 	background-color: #c5c5c5;
 	border-bottom: 2px solid #000000;
 	border-top: 2px solid #000000;
 	position: sticky;
-	top: 0;
 	z-index: 3;
-	padding-top: 20px;
-	padding-bottom: 10px;
-
 }
 header {
 	transform: rotate(-24deg);
 }
-
+.navbardiv {
+	/* top: 90vh; */
+	position: sticky;
+	background-color: #f5f5f5;
+	z-index: 300;
+	/* padding-top: 5px; */
+	top: 150px;
+	/* left: 0;
+	right: 0; */
+	/* bottom: 0; */
+}
 body {
 	background-color:#0c0b0b;
+	position: relative;
 }
 h1 {
 	font-family: 'Montserrat';
@@ -103,11 +114,12 @@ mark {
 }
 
 #navbar {
-	bottom: 0;
-	left: 0;
-	right: 0;
+	/* bottom: 0; */
+	/* left: 0;
+	right: 0; */
 	z-index: 100;
-	position: fixed;
+	position: sticky;
+	top: 150px;
 	background-color: #f5f5f5;
 	border-top: #0a0a0a;
 	border-style: inset;
