--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+:root {
+    --root-size: 8px;
+    --root-size-nav: 8px;
+    --root-size-big: 16px;
+    --root-size-h1: 21px;
+    --root-size-sub: 21px;
+    --root-size-h2: 46px;
+    --root-size-h3: 14px;
+    --root-size-h: 14px;
+    --root-line-height: 20px;
+    --padding-left: 8px;
+    --width-p: 21ch;
+    --padding-left-p: 8px;
+    --padding-left-sticky: 8px;
+    --margin-p-left: 8px;
+    --margin-p-right: 8px;
+}
 
 header {
 	color: #f5f5f5;
@@ -18,23 +35,14 @@ header {
 	border-top: 2px solid #000000;
 	position: sticky;
 	z-index: 3;
+	padding-top: 2%;
+	padding-bottom: 2%;
 }
 header {
 	transform: rotate(-24deg);
 }
-.navbardiv {
-	/* top: 90vh; */
-	position: sticky;
-	background-color: #f5f5f5;
-	z-index: 300;
-	/* padding-top: 5px; */
-	top: 150px;
-	/* left: 0;
-	right: 0; */
-	/* bottom: 0; */
-}
 body {
-	background-color:#0c0b0b;
+	background-color:#e4e4e4;
 	position: relative;
 }
 h1 {
@@ -140,7 +148,7 @@ mark {
     font-weight: 550;
     text-decoration: none;
      }
-	 
+
 #arrow {
 	color: rgb(32, 32, 32);
 	background-color: rgb(255, 255, 255);
@@ -157,9 +165,10 @@ mark {
 	position: fixed;
 }
 h3 {
-	font-size: 28px;
 	font-weight: bold;
 	line-height: 145%;
+	font-size: calc(var(--root-size-h3) * 2);
+    padding-left: calc(var(--padding-left-sticky) * 2);
 }
 article {
 	margin-top: 0;
