--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -107,6 +107,7 @@ header {
     line-height: calc(var(--root-line-height) * 4);
     padding-left: calc(var(--padding-left) * 2);
     padding-top: 40px;
+    display: flex;
 }
 h1 {
     font-size: calc(var(--root-size-h1) * 2);
@@ -172,8 +173,8 @@ h3 {
     padding: 10px;
 }
 .authordiv {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    align-items: baseline;
     
 }
 h4 {
