--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 
 }
 .darkrectangle {
-	padding: 40px;
+	padding: 80px;
 	background-color: #101010;
 	position:relative;
 	z-index: 500;
@@ -78,13 +78,10 @@ h1 {
 }
 .container-text {
 	display: flex;
-	color: #000000;
+	color: #f1f1f1;
 	justify-content: center;
 	margin-top: 20px;
-	background-color: #ED4A34;
-	/* border: #f5f5f5; */
-	/* border-style: solid; */
-	border-radius: 100px;
+	border-left: 2px solid #cacaca;
 	align-items: center;
 	margin-right: 40px;
 	height: 54px;
