--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 header {
-	color: #f5f5f5;
+	color: #A4A4A4;
 	padding: 16px;
 	line-height: 120px;
 	padding-top: 40px;
@@ -27,7 +27,7 @@ header {
 }
 .darkrectangle {
 	padding: 80px;
-	background-color: #101010;
+	background-color: #1A1A1A;
 	position:relative;
 	z-index: 500;
 	width: 100%;
@@ -39,7 +39,7 @@ header {
 	transform: rotate(-24deg);
 }
 body {
-	background-color:#101010;
+	background-color:#1A1A1A;
 	position: relative;
 	padding-bottom: 0%;
 }
@@ -58,8 +58,8 @@ article {
 	padding-bottom: 0%;
 }
 h1 {
-	font-family: 'Montserrat';
-	color: #5c5c5c;
+	font-family: "Zilla Slab Highlight", serif;
+	color: #5f5f5f;
 	font-size: 90px;
 	font-style: normal;
 	font-weight: bolder;
@@ -67,14 +67,14 @@ h1 {
 	stroke-width: 2px;
 }
 .crimetext {
-	border-bottom: 2px solid #cacaca;
-    border-top: 2px solid #cacaca;
+	/* border-bottom: 2px solid #cacaca; */
+    /* border-top: 2px solid #cacaca; */
 }
 .factorytext {
-	border-bottom: 2px solid #cacaca;
+	/* border-bottom: 2px solid #cacaca; */
 } 
 .disciplinetext {
-	border-bottom: 2px solid #cacaca;
+	/* border-bottom: 2px solid #cacaca; */
 }
 .container-text {
 	display: flex;
@@ -129,13 +129,13 @@ h1 {
   }
 
 #crime {
-	color: #ED4A34;
+	color: #FE5B51;
 }
 #factory {
-	color: #eaeaea;
+	color: #FACA01;
 }
 #discipline {
-	color: #eaeaea;
+	color: #AD8AFF;
 }
 
 mark {
