--- a/assets/common.css
+++ b/assets/common.css
@@ -60,6 +60,14 @@ p {
 sup {
     line-height: 0;
 }
+ /* big paragraphs */
+ .bigtext1 {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: calc(var(--root-size-big) * 1.7);
+    line-height: 180%;
+    width: calc(var(--width-p) * 1.3); 
+}
 .withbackground {
 	background-color: #D9D9D9;
 	padding-bottom: 20px;
