--- a/article-discipline/style.css
+++ b/article-discipline/style.css
@@ -11,25 +11,6 @@
     padding-top: 20px
     
 }
- /* Next article's name */
-#nextarticle {
-    font-size: 36px;
-    font-family: "Helvetica";
-    font-weight: bold;
-    font-style: italic;
-    line-height: 165%;
-}
- /* Subtitle that says Read next */
-#readnexttext {
-    font-size: 30px;
-}
- /* Read next section */
-.readnext {
-    margin: 16px;
-    margin-top: 40px;
-    margin-bottom: 100px;
-    
-}
 mark {
     background-color: yellow;
 }
@@ -46,17 +27,8 @@ header {
 h1 {
     font-size: calc(var(--root-size-h1) * 2);
 }
-#discipline {
-    font-size: calc(var(--root-size-sub) * 3);
-}
-
 h2 { 
     font-size: calc(var(--root-size-h2) * 2);
-}
-#titlecontinue {
-    font-size: calc(var(--root-size-h2) * 2);
-    font-family: "Oxanium", sans-serif;
-    font-style: normal;
 }
 h3 {
     font-family: "Helvetica";
@@ -65,6 +37,19 @@ h3 {
     line-height: 120%;
     font-size: calc(var(--root-size-h3) * 2);
     padding-left: calc(var(--padding-left-sticky) * 2);
+}
+h4 {
+    font-size: 28px;
+    margin-left: 16px;
+    line-height: 145%;
+}
+#titlecontinue {
+    font-size: calc(var(--root-size-h2) * 2);
+    font-family: "Oxanium", sans-serif;
+    font-style: normal;
+}
+#discipline {
+    font-size: calc(var(--root-size-sub) * 3);
 }
 #volume {
     font-family: "Helvetica";
@@ -106,11 +91,6 @@ h3 {
     border-top: 3px solid;
     padding: 10px;
 }
-h4 {
-    font-size: 28px;
-    margin-left: 16px;
-    line-height: 145%;
-}
  /* Author's name and year */
 #author {
     margin-left: 0px;
@@ -123,14 +103,14 @@ h4 {
     color: rgb(32, 32, 32);
     background-color: rgb(255, 255, 255);
     border: #0a0a0a;
+    width: 50px;
     border-style: inset;
     border-radius: 8px;
     font-size: 24px;
     font-weight: bold;
     padding: 10px;
     bottom: 90px;
-    left: 314px;
-    right: 10px;
+    right: 30px;
     z-index: 100;
     position: fixed;
 }
@@ -230,8 +210,11 @@ h4 {
         --root-size-h3: 16px;
         --padding-left-p: 50px;
         --width-p: 40ch;
+        --left-arrow: 480px;
+        --right-arrow: 20px;
 	}
     .authordiv {
         display: flex;
         align-items: baseline;
     }
+}
